--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2163,7 +2163,11 @@
   }
 
   .nav_bar_h3 {
-    margin-top: 15px;
+    margin-top: 0px;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     font-size: 16px;
   }
 }
@@ -2179,7 +2183,7 @@
   }
 
   .nav_bar_h3 {
-    margin-top: 15px;
+    margin-top: 0px;
   }
 }
 
@@ -2190,7 +2194,11 @@
   }
 
   .nav_bar_h3 {
-    margin-top: 15px;
+    margin-top: 0px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
@@ -2199,12 +2207,31 @@
     width: 90vw;
   }
 
+  .navbar {
+    background-color: #fafafa;
+  }
+
+  .about_section {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+
+  .services_section {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+
   ._2_block_row_ailment_right {
     height: 375px;
   }
 
   ._2_block {
     padding-right: 0px;
+  }
+
+  .contact_section {
+    padding-top: 75px;
+    padding-bottom: 0px;
   }
 
   .menu_container {
@@ -2224,13 +2251,18 @@
     line-height: 65px;
   }
 
+  .footer_h3 {
+    font-size: 15px;
+    line-height: 24px;
+  }
+
   .cards_grid {
     grid-column-gap: 20px;
   }
 
   .footer_link {
     font-size: 12px;
-    line-height: 14px;
+    line-height: 18px;
   }
 
   .footer_link-2 {
@@ -2250,6 +2282,16 @@
   .contact_page_section {
     padding-right: 0px;
     padding-left: 0px;
+  }
+
+  .testimonial_page_section {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+
+  .testimonials_section {
+    padding-top: 75px;
+    padding-bottom: 75px;
   }
 
   .testimonial_para {
@@ -2354,6 +2396,15 @@
     line-height: 40px;
   }
 
+  .services_intro_section {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+
+  .our_team_section {
+    padding-top: 75px;
+  }
+
   .services_h3_mobile {
     margin-top: 0px;
     font-size: 25px;
@@ -2370,13 +2421,17 @@
     line-height: 14px;
   }
 
+  .privacy_section_14 {
+    padding-bottom: 0px;
+  }
+
   ._360_frame_block {
     height: 300px;
   }
 
   .footer_hours {
     font-size: 12px;
-    line-height: 12px;
+    line-height: 18px;
   }
 
   .bio_img {
@@ -2657,16 +2712,8 @@
   }
 
   ._5_block {
-    margin-right: 3px;
-    margin-left: 3px;
-  }
-
-  ._5_block_right {
-    margin-left: 3px;
-  }
-
-  ._5_block_left {
-    margin-right: 3px;
+    margin-right: 6px;
+    margin-left: 6px;
   }
 
   .nav_bar_h3 {
@@ -3585,8 +3632,8 @@
 
   .gallery_image {
     height: 200px;
-    -o-object-position: 50% 15%;
-    object-position: 50% 15%;
+    -o-object-position: 50% 22%;
+    object-position: 50% 22%;
   }
 
   .arrow_wrapper {
