--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -137,6 +137,7 @@
   -ms-flex-align: center;
   align-items: center;
   text-align: center;
+  text-decoration: none;
 }
 
 .parallax_block_herbs {
@@ -1500,6 +1501,11 @@
   height: 100px;
 }
 
+.icon_h3 {
+  font-size: 18px;
+  line-height: 24px;
+}
+
 .icon_para {
   text-align: left;
 }
@@ -1799,7 +1805,7 @@
   box-shadow: 7px 7px 150px 0 rgba(84, 102, 129, 0.08);
 }
 
-.arrow-image-mobile {
+.arrow_image_left_mobile {
   display: none;
 }
 
@@ -1868,7 +1874,7 @@
   align-items: center;
 }
 
-.arrow-image {
+.arrow_image_left {
   -webkit-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   transform: rotate(0deg);
@@ -1948,8 +1954,10 @@
   align-items: center;
   border: 1px none #000;
   font-family: Inter, sans-serif;
+  color: #333;
   font-size: 16px;
   text-align: left;
+  text-decoration: none;
   text-shadow: 1px 1px 1px #3898ec;
 }
 
@@ -2007,7 +2015,7 @@
   align-items: center;
 }
 
-.arrow-image-mobile-left {
+.arrow_image_right_mobile {
   display: none;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
@@ -2023,6 +2031,10 @@
   grid-template-rows: auto;
   border-top: 1px solid #3898ec;
   text-align: left;
+}
+
+.link-block {
+  text-decoration: none;
 }
 
 @media screen and (min-width: 1280px) {
@@ -2442,7 +2454,7 @@
     margin-top: 0px;
   }
 
-  .arrow-image-mobile {
+  .arrow_image_left_mobile {
     position: relative;
     left: 55px;
     display: block;
@@ -2457,7 +2469,7 @@
     padding-bottom: 25px;
   }
 
-  .arrow-image {
+  .arrow_image_left {
     display: none;
   }
 
@@ -2478,7 +2490,7 @@
     padding-top: 0px;
   }
 
-  .arrow-image-mobile-left {
+  .arrow_image_right_mobile {
     position: relative;
     left: 55px;
     display: block;
@@ -3666,7 +3678,7 @@
     align-items: center;
   }
 
-  .arrow-image-mobile-left {
+  .arrow_image_right_mobile {
     left: auto;
     right: 55px;
     margin-right: 45px;
