--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1017,7 +1017,7 @@
   object-fit: fill;
 }
 
-.muscoskeletal_block {
+.musculoskeletal_block {
   overflow: visible;
   width: 50%;
   height: 100%;
@@ -2330,7 +2330,7 @@
     width: 40%;
   }
 
-  .muscoskeletal_block {
+  .musculoskeletal_block {
     width: 40%;
   }
 
@@ -3159,7 +3159,7 @@
     opacity: 0.25;
   }
 
-  .muscoskeletal_block {
+  .musculoskeletal_block {
     position: absolute;
     z-index: -1;
     display: block;
