--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1673,6 +1673,8 @@
 }
 
 .disclaimer_para {
+  padding-top: 7px;
+  border-top: 1px solid #3898ec;
   font-size: 12px;
   line-height: 18px;
   text-align: left;
@@ -1760,8 +1762,8 @@
   height: 150px;
   -o-object-fit: cover;
   object-fit: cover;
-  -o-object-position: 50% 25%;
-  object-position: 50% 25%;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%;
 }
 
 .block_text_pre_h2_left {
@@ -1976,11 +1978,6 @@
   font-weight: 700;
 }
 
-.link {
-  color: #3898ec;
-  font-weight: 700;
-}
-
 .success-message {
   background-color: #f0f7ff;
 }
@@ -2051,6 +2048,55 @@
   -ms-flex-align: center;
   align-items: center;
   text-align: center;
+}
+
+._2_block_row_reverse {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.gallery_image_2 {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 30%;
+  object-position: 50% 30%;
+}
+
+.gallery_image_3 {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 25%;
+  object-position: 50% 25%;
+}
+
+.gallery_image_4 {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 25%;
+  object-position: 50% 25%;
+}
+
+.gallery_image_5 {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 0%;
+  object-position: 50% 0%;
 }
 
 @media screen and (min-width: 1280px) {
@@ -2774,8 +2820,21 @@
   }
 
   ._5_block {
-    margin-right: 6px;
-    margin-left: 6px;
+    margin-right: 1px;
+    margin-left: 1px;
+  }
+
+  ._5_block_right {
+    margin-left: 1px;
+  }
+
+  ._5_block_left {
+    margin-right: 1px;
+  }
+
+  .gallery_image {
+    -o-object-position: 60% 50%;
+    object-position: 60% 50%;
   }
 
   .nav_bar_h3 {
@@ -2818,12 +2877,30 @@
     -ms-flex-pack: center;
     justify-content: center;
   }
+
+  ._2_block_row_reverse {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .gallery_image_3 {
+    -o-object-position: 45% 25%;
+    object-position: 45% 25%;
+  }
 }
 
 @media screen and (max-width: 479px) {
   .about_section {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .services_section {
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .section_h2 {
@@ -2855,8 +2932,8 @@
 
   .contact_section {
     height: auto;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .menu_container {
@@ -2981,13 +3058,13 @@
   }
 
   .contact_page_section {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .testimonial_page_section {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .testimonials_section {
@@ -3178,8 +3255,8 @@
   }
 
   .conditions_treated_page {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   ._2_block_row_ailment_left {
@@ -3382,13 +3459,18 @@
   }
 
   .services_intro_section {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 0px;
+  }
+
+  .services_outro_section {
+    padding-top: 0px;
+    padding-bottom: 25px;
   }
 
   .our_team_section {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .solo_para {
@@ -3477,6 +3559,7 @@
 
   .services_para_mobile {
     margin-top: 10px;
+    padding-bottom: 25px;
     text-align: left;
   }
 
@@ -3559,6 +3642,10 @@
     opacity: 0.25;
   }
 
+  .privacy_section_main {
+    padding-top: 25px;
+  }
+
   .legal_h1 {
     font-size: 35px;
     line-height: 35px;
@@ -3589,6 +3676,10 @@
     object-fit: fill;
   }
 
+  .privacy_section_14 {
+    padding-bottom: 25px;
+  }
+
   .ryu_body {
     max-width: 100vw;
     font-size: 15px;
@@ -3603,8 +3694,8 @@
   .testimonials_section_mobile {
     display: block;
     height: 100vh;
-    padding-top: 75px;
-    padding-bottom: 75px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 
   .slider {
@@ -3654,8 +3745,18 @@
   }
 
   .disclaimer_para {
+    padding-top: 7px;
+    border-top: 1px solid #3898ec;
     font-size: 15px;
     line-height: 22.5px;
+  }
+
+  .tou_section_main {
+    padding-top: 25px;
+  }
+
+  .tou_section_22 {
+    padding-bottom: 25px;
   }
 
   .list-3 {
@@ -3789,6 +3890,46 @@
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
+  }
+
+  ._2_block_row_reverse {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .gallery_image_2 {
+    height: 200px;
+    -o-object-position: 50% 33%;
+    object-position: 50% 33%;
+  }
+
+  .gallery_image_3 {
+    height: 200px;
+    -o-object-position: 50% 22%;
+    object-position: 50% 22%;
+  }
+
+  .gallery_image_4 {
+    height: 200px;
+    -o-object-position: 50% 22%;
+    object-position: 50% 22%;
+  }
+
+  .gallery_image_5 {
+    height: 200px;
+    -o-object-position: 50% 10%;
+    object-position: 50% 10%;
   }
 }
 
