--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -329,7 +329,7 @@
 .footer_link-2.footer_icon {
   display: inline-block;
   margin-top: 15px;
-  margin-right: 7px;
+  margin-right: 10px;
   margin-left: 0px;
 }
 
@@ -339,6 +339,7 @@
 }
 
 .footer_icons {
+  width: 100%;
   font-family: 'Fa brands 400', sans-serif;
   color: #fff;
   font-size: 22px;
@@ -2019,10 +2020,10 @@
   padding-top: 7px;
   padding-bottom: 0px;
   grid-column-gap: 0px;
-  -ms-grid-columns: 0.25fr 1fr;
-  grid-template-columns: 0.25fr 1fr;
-  -ms-grid-rows: auto;
-  grid-template-rows: auto;
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
   border-top: 1px solid #3898ec;
   text-align: left;
 }
