--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1269,6 +1269,7 @@
 }
 
 .nav_link {
+  padding: 15px;
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
@@ -1492,8 +1493,16 @@
 
 .nav-menu {
   position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   margin-right: 0px;
   margin-left: auto;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   direction: ltr;
   text-align: center;
 }
@@ -2107,14 +2116,17 @@
   margin-bottom: 0px;
   padding-top: 100px;
   padding-bottom: 100px;
+  background-color: #f0f7ff;
 }
 
-.collection-list-wrapper-3 {
+.ryu_blog_block {
   margin-top: 25px;
   margin-bottom: 50px;
+  background-color: transparent;
 }
 
 .cms_link_block {
+  height: 650px;
   color: #333;
   text-decoration: none;
 }
@@ -2131,7 +2143,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 600px;
+  height: 650px;
   margin-top: 0px;
   margin-bottom: 25px;
   padding: 0px;
@@ -2150,9 +2162,13 @@
   transition: opacity 200ms ease-in;
 }
 
+.card_top {
+  height: 250px;
+}
+
 .card_bottom {
   height: 400px;
-  padding: 50px;
+  padding: 50px 35px;
   background-color: #fff;
 }
 
@@ -2160,11 +2176,12 @@
   margin-top: 0px;
   margin-bottom: 0px;
   color: #000;
-  font-size: 36px;
+  font-size: 24px;
   line-height: 1.3em;
 }
 
 .card_date {
+  margin-top: 10px;
   margin-bottom: 10px;
   color: #333;
   font-weight: 700;
@@ -2172,6 +2189,17 @@
 
 .card_cms_para {
   color: #000;
+}
+
+.collection-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 @media screen and (min-width: 1280px) {
@@ -2674,7 +2702,7 @@
     padding-bottom: 75px;
   }
 
-  .collection-list-wrapper-3 {
+  .ryu_blog_block {
     margin-bottom: 25px;
   }
 
