--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2116,7 +2116,7 @@
   margin-bottom: 0px;
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #f0f7ff;
+  background-color: transparent;
 }
 
 .ryu_blog_block {
@@ -2164,12 +2164,15 @@
 
 .card_top {
   height: 250px;
+  -o-object-fit: fill;
+  object-fit: fill;
 }
 
 .card_bottom {
   height: 400px;
   padding: 50px 35px;
-  background-color: #fff;
+  background-color: #f0f7ff;
+  background-clip: border-box;
 }
 
 .card_h3-2 {
@@ -2200,6 +2203,17 @@
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+}
+
+.blog_page {
+  min-height: 100vh;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.card_top_img {
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 @media screen and (min-width: 1280px) {
