Changed minimum VH for site map page

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1706,6 +1706,10 @@
   object-fit: cover;
 }
 
+.site_map_section {
+  min-height: 100vh;
+}
+
 .block_text_pre_h2 {
   padding-top: 30px;
   color: #3898ec;
