--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2296,6 +2296,17 @@
   text-decoration: none;
 }
 
+.parallax_block_tcm {
+  position: relative;
+  overflow: hidden;
+  height: 500px;
+  background-image: url('../images/traditional_chinese_medicine.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-top: 125px;
