--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2307,6 +2307,12 @@
   background-attachment: fixed;
 }
 
+.accessibility_section {
+  min-height: 100vh;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-top: 125px;
