Added an additional review that was missed earlier

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -3539,6 +3539,10 @@
     padding: 15px 0px;
   }
 
+  .testimonial_block.mix.yelp._2021 {
+    padding: 15px 0px;
+  }
+
   .testimonial_block.mix.google._2018 {
     padding: 15px 0px;
   }
