--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2331,6 +2331,12 @@
   line-height: 21px;
 }
 
+.service_page_section {
+  min-height: 100vh;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-top: 125px;
