Starting the work of the service detail pages

--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2187,6 +2187,7 @@
   border-radius: 0px;
   background-color: #f0f7ff;
   background-clip: border-box;
+  -webkit-text-fill-color: inherit;
 }
 
 .card_h3-2 {
