--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2338,6 +2338,12 @@
   padding-bottom: 100px;
 }
 
+.image-3 {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-top: 125px;
