--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2344,6 +2344,14 @@
   margin-left: auto;
 }
 
+.acu_img_block {
+  width: 100%;
+  height: 300px;
+  background-image: url('../images/needles_close_up.jpg');
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
 @media screen and (min-width: 1280px) {
   .about_section {
     padding-top: 125px;
