--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -2338,6 +2338,13 @@
   padding-bottom: 100px;
 }
 
+.service_detail_h2 {
+  margin-top: 35px;
+  font-size: 25px;
+  line-height: 25px;
+  text-shadow: 1px 1px 1px #3898ec;
+}
+
 .image-3 {
   display: block;
   margin-right: auto;
