--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -3371,7 +3371,7 @@
   }
 
   .card_h3-2 {
-    font-size: 30px;
+    font-size: 22px;
     text-align: left;
   }
 
@@ -3381,6 +3381,18 @@
 }
 
 @media screen and (max-width: 479px) {
+  .main_container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
   .about_section {
     padding-top: 25px;
     padding-bottom: 25px;
@@ -4435,8 +4447,46 @@
     padding-bottom: 25px;
   }
 
+  .ryu_blog_block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .cms_block {
+    display: block;
+    width: 100%;
+    grid-auto-columns: 1fr;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
+    grid-template-rows: auto auto;
+  }
+
   .card_bottom {
     padding: 7px 15px;
+  }
+
+  .card_h3-2 {
+    font-size: 22px;
+  }
+
+  .collection-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 
   .blog_collection_page {
